Removes warning on Java 8'