@@ -6,8 +6,6 @@ javaOptions += "-Xms512M"
 
 javaOptions += "-Xmx2G"
 
-javaOptions += "-XX:MaxPermSize=512M"
-
 javaOptions += "-XX:ReservedCodeCacheSize=512M"
 
 fork in test := true
